fixed home bottom spacing

--- a/themes/foodiepro-2.1.8/style.css
+++ b/themes/foodiepro-2.1.8/style.css
@@ -2591,7 +2591,7 @@ div.gform_wrapper .gform_footer input[type="submit"] {
 .home-bottom {
 	float:left;
 	width:100%;
-	margin-top:20px;
+	margin-top:60px;
 }
 
 .paged .home-middle,
